commit intermediate